--- a/style.css
+++ b/style.css
@@ -84,24 +84,38 @@ header {
         text-align: center;
     }
 }
-
 @media screen and (min-width: 601px) {
     .navbar .logo a {
-        font-size: 48px;
+        font-size: 20px;
     }
     .navbar .links a{
-        font-size: 30px;
+        font-size: 15px;
     }
 }
+@media screen and (min-width: 850px) {
+    .navbar .logo a {
+        font-size: 30px;
+    }
+    .navbar .links a{
+        font-size: 20px;
+    }
+}
+@media screen and (min-width: 1250px) {
+    .navbar .logo a {
+        font-size: 40px;
+    }
+    .navbar .links a{
+        font-size: 25px;
+    }
+}
+
 
 .navbar .links {
     display: flex;
-    gap: 2rem;
+    gap: 0.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.page2 {
-}
 
 .fullcontainer {
     height: 700px;
@@ -148,7 +162,6 @@ h1 {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: solid white;
-
 }
 
 .abt-box h2 {
@@ -163,6 +176,25 @@ h1 {
     font-family: "Roboto";
 }
 
+#read-more-btn1 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5vw;
+    background-color: #9c9e9f;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: "Audiowide";
+}
+
+#read-more-btn1:hover {
+    background-color: #e11219;
+}
+
+
 .legacy {
     height: auto;
     background-color: #000;
@@ -175,7 +207,7 @@ h1 {
     margin-left: 20px;
     margin-right: 20px;
     height: 630px;
-    padding-top: 90px;
+    padding-top: 50px;
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -203,32 +235,48 @@ h1 {
     font-size: 1.5rem;
     font-family: "Roboto";
 }
+#read-more-btn2 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5vw;
+    background-color: #9c9e9f;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: "Audiowide";
+}
+
+#read-more-btn2:hover {
+    background-color: #e11219; 
+}
 
 .timelines {
     height: auto;
     background-color: #000;
-    background-image: url(https://i.pinimg.com/564x/cd/27/1e/cd271ee841ce5d5590f7e1be5f20e90b.jpg);
+    background-image: url(https://static.sportsmanor.com/wp-content/uploads/2023/01/28154417/LeBron-James-in-Cavs-Heat-and-Lakers-jersey.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: top;
-    margin-top: 120px;
+    margin-top: 70px;
     margin-left: 20px;
     margin-right: 20px;
     height: 630px;
-    padding-top: 90px;
+    padding-top: 50px;
+    padding-bottom: 90px;
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .timeline-box {
     margin-inline: 50px;
     background-color: #070707cc;
-    border-radius: px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: solid white;
 }
-
 
 .timeline-box h2 {
     margin-bottom: 10px;
@@ -240,7 +288,23 @@ h1 {
     font-size: 1.5rem;
     font-family: "Roboto";
 }
+#read-more-btn3 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5vw;
+    background-color: #9c9e9f;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: "Audiowide";
+}
 
+#read-more-btn3:hover {
+    background-color: #e11219; 
+}
 .championships {
     height: auto;
     background-color: #000;
@@ -249,7 +313,7 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     align-items: top;
-    margin-top: 120px;
+    margin-top: 40px;
     margin-left: 20px;
     margin-right: 20px;
     height: 630px;
@@ -265,7 +329,6 @@ h1 {
     margin-inline: 50px;
     margin-bottom: 300px;
     background-color: #070707cc;
-    border-radius: px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: solid white;
@@ -281,11 +344,47 @@ h1 {
     font-size: 1.5rem;
     font-family: "Roboto";
 }
+#read-more-btn4 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5vw;
+    background-color: #9c9e9f;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: "Audiowide";
+}
+
+#read-more-btn4:hover {
+    background-color: #e11219; 
+}
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 0.6s ease-in-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 @media screen and (max-width: 600px) {
     .abt-box p,
     .legacy-box p,
     .timeline-box p,
+    #section1box p,
     .championships-box p {
         font-size: 15px;
     }
@@ -293,7 +392,26 @@ h1 {
     .abt-box h2,
     .legacy-box h2,
     .timeline-box h2,
+    #section1box h2,
     .championships-box h2 {
         font-size: 25px;
     }
 }
+@media screen and (max-width: 800px) {
+    .abt-box p,
+    #section1box p,
+    .legacy-box p,
+    .timeline-box p,
+    .championships-box p {
+        font-size: 15px;
+    }
+
+    .abt-box h2,
+    #section1box h2,
+    .legacy-box h2,
+    .timeline-box h2,
+    .championships-box h2 {
+        font-size: 25px;
+    }
+}
+
